<resources xmlns:tools="http://schemas.android.com/tools">
    <string name="app_name" translatable="false">Aegis</string>
    <string name="app_name_full" translatable="false">Aegis Authenticator</string>
    <string name="org_name_full" translatable="false">Beem Development</string>
    <string name="action_settings">Settings</string>
    <string name="action_about">About</string>
    <string name="action_delete">Delete</string>
    <string name="action_transfer">Transfer</string>
    <string name="action_edit_icon">Edit icon</string>
    <string name="action_reset_usage_count">Reset usage count</string>
    <string name="action_reset_usage_count_dialog">Are you sure you want to set the usage count of this entry to 0?</string>
    <string name="action_default_icon">Restore default icon</string>
    <string name="discard">Discard</string>
    <string name="save">Save</string>
    <string name="all">All</string>
    <string name="issuer">Issuer</string>
    <string name="yandex_pin">PIN (4–16 digits)</string>
    <string name="motp_pin">PIN (4 digits)</string>
    <string name="suggested">Suggested</string>
    <string name="usage_count">Usage count</string>
    <string name="warning">Warning</string>
    <string name="pref_cat_appearance_app">App</string>
    <string name="pref_cat_appearance_entries">Entries</string>
    <string name="pref_cat_backups_android">Android</string>
    <string name="pref_cat_backups_auto">Automatic backups</string>
    <string name="pref_section_behavior_title">Behavior</string>
    <string name="pref_section_behavior_summary">Customize the behavior when interacting with the entry list.</string>
    <string name="pref_section_appearance_title">Appearance</string>
    <string name="pref_section_appearance_summary">Adjust the theme, language and other settings that affect the appearance of the app.</string>
    <string name="pref_section_security_title">Security</string>
    <string name="pref_section_security_summary">Configure encryption, biometric unlock, auto lock and other security settings.</string>
    <string name="pref_section_import_export_title">Import &amp; Export</string>
    <string name="pref_section_import_export_summary">Import backups of Aegis or other authenticator apps. Create manual exports of your Aegis vault.</string>
    <string name="pref_section_audit_log_title">Audit log</string>
    <string name="pref_section_audit_log_summary">Find a list of all reported important events that happened within the app.</string>
    <string name="pref_section_backups_title">Backups</string>
    <string name="pref_section_backups_summary">Set up automatic backups to a location of your choosing or enable participation in Android\'s cloud backup system.</string>
    <string name="pref_section_icon_packs">Icon packs</string>
    <string name="pref_section_icon_packs_summary">Manage and import icon packs</string>
    <string name="pref_select_theme_title">Theme</string>
    <string name="pref_dynamic_colors_title">Dynamic colors</string>
    <string name="pref_dynamic_colors_summary">Apply an overlay based on the colors of your Android theme</string>
    <string name="pref_view_mode_title">View mode</string>
    <string name="pref_lang_title">Language</string>
    <string name="pref_show_icons_title">Show icons</string>
    <string name="pref_show_icons_summary">Display icons next to each entry</string>
    <string name="pref_code_group_size_title">Code digit grouping</string>
    <string name="pref_code_group_size_summary">Select number of digits to group codes by</string>
    <string name="pref_account_name_position_title">Show the account name</string>
    <string name="pref_show_next_code_title">Show next code</string>
    <string name="pref_show_next_code_summary">Generate and show the next code ahead of time</string>
    <string name="pref_expiration_state_title">Indicate when codes are about to expire</string>
    <string name="pref_expiration_state_summary">Change the color of the codes and have them blink when they are about to expire</string>
    <string name="pref_expiration_state_fallback">Change the color of the codes when they are about to expire</string>
    <string name="pref_shared_issuer_account_name_title">Only show account name when necessary</string>
    <string name="pref_shared_issuer_account_name_summary">Only show account names whenever they share the same issuer. Other account names will be hidden.</string>
    <string name="pref_account_name_position_summary_override">This setting is overridden by the tiles view mode. Account name will be shown below the issuer.</string>
    <string name="pref_import_file_title">Import from file</string>
    <string name="pref_import_file_summary">Import tokens from a file</string>
    <string name="pref_android_backups_title">Android cloud backups</string>
    <string name="pref_android_backups_summary">Allow Android\'s cloud backup system to include Aegis\' vault in its backups. This is only supported for encrypted vaults.</string>
    <string name="pref_android_backups_hint"><i>Device-to-device (D2D) backups are always allowed, regardless of the setting above</i></string>
    <string name="pref_nutstore_backup_title">Nutstore (Jianguoyun) backups</string>
    <string name="pref_nutstore_backup_summary">Automatically upload encrypted backups to Nutstore and restore them manually</string>
    <string name="title_activity_nutstore_backups">Nutstore backups</string>
    <string name="nutstore_account">Nutstore account</string>
    <string name="nutstore_app_password">Application password</string>
    <string name="nutstore_app_password_hint_saved">A password is saved. Leave this field empty to keep it.</string>
    <string name="nutstore_app_password_hint_empty">Create an application password in the Nutstore security settings</string>
    <string name="nutstore_root_path">Remote directory</string>
    <string name="nutstore_root_path_hint">Relative to the WebDAV root, for example Aegis</string>
    <string name="nutstore_retention">Versions to keep</string>
    <string name="nutstore_retention_hint">Between %1$d and %2$d</string>
    <string name="nutstore_auto_backup">Automatic backup</string>
    <string name="nutstore_auto_backup_summary">Upload a new backup after every change. Only encrypted vaults are supported.</string>
    <string name="nutstore_test_connection">Test connection</string>
    <string name="nutstore_save">Save</string>
    <string name="nutstore_backup_now">Back up now</string>
    <string name="nutstore_revoke">Revoke authorization</string>
    <string name="nutstore_revoke_confirm_title">Revoke Nutstore authorization</string>
    <string name="nutstore_revoke_confirm_message">The stored application password and all pending uploads will be deleted. Existing backups on Nutstore are kept.</string>
    <string name="nutstore_revoked">Nutstore authorization revoked</string>
    <string name="nutstore_saved">Nutstore settings saved</string>
    <string name="nutstore_save_error">Unable to save the Nutstore settings</string>
    <string name="nutstore_backup_queued">Backup queued</string>
    <string name="nutstore_encryption_required">Enable vault encryption before using Nutstore backups.</string>
    <string name="nutstore_connection_testing">Testing connection</string>
    <string name="nutstore_connection_success">Connection successful. Directory and write access are available.</string>
    <string name="nutstore_connection_warning">Connection successful with a warning: %s</string>
    <string name="nutstore_status_corrupted">The stored settings are damaged. Please enter the account and application password again.</string>
    <string name="nutstore_status_unconfigured">Not configured</string>
    <string name="nutstore_status_never">No backup uploaded yet</string>
    <string name="nutstore_status_idle">Ready. No upload is pending.</string>
    <string name="nutstore_status_pending">Waiting to upload</string>
    <string name="nutstore_status_uploading">Uploading</string>
    <string name="nutstore_status_success">Last backup uploaded: %s</string>
    <string name="nutstore_status_failed">Last upload failed: %1$s (%2$s)</string>
    <string name="nutstore_status_cleanup_failed">Old remote versions could not be removed.</string>
    <string name="nutstore_error_network">Network error</string>
    <string name="nutstore_error_timeout">Connection timed out</string>
    <string name="nutstore_error_authentication">Authentication failed - check the account and application password</string>
    <string name="nutstore_error_permission">Permission denied</string>
    <string name="nutstore_error_not_found">The remote directory does not exist</string>
    <string name="nutstore_error_conflict">The remote path conflicts with an existing item</string>
    <string name="nutstore_error_quota">Not enough space on Nutstore</string>
    <string name="nutstore_error_rate_limited">Too many requests - try again later</string>
    <string name="nutstore_error_server">The Nutstore server reported an error</string>
    <string name="nutstore_error_configuration">The configuration is incomplete</string>
    <string name="nutstore_error_credentials">The saved application password is no longer usable</string>
    <string name="nutstore_error_storage">Local backup storage error</string>
    <string name="nutstore_error_snapshot">The vault could not be exported. Make sure encryption and a password are set.</string>
    <string name="nutstore_error_unknown">Unknown error</string>
    <string name="nutstore_versions_title">Cloud backups</string>
    <string name="nutstore_browse_view">Browse cloud backups</string>
    <string name="nutstore_listing">Loading cloud backups</string>
    <string name="nutstore_downloading">Downloading backup</string>
    <string name="nutstore_device_label">Device</string>
    <string name="nutstore_versions_empty">No backups found for this device</string>
    <string name="nutstore_versions_incomplete">The list may be incomplete; some versions are not shown.</string>
    <string name="nutstore_version_details">%1$s \u00b7 %2$s \u00b7 %3$s</string>
    <string name="nutstore_restore_confirm_title">Restore this backup</string>
    <string name="nutstore_restore_confirm_message">%1$s\n\nAegis downloads this version and opens the import screen. Your current data is not changed until the import is confirmed.</string>
    <string name="nutstore_restore">Restore</string>
    <string name="nutstore_error_invalid_backup">The downloaded file is not a valid encrypted Aegis backup</string>
    <string name="nutstore_restore_mode_hint">Restore mode: configure the Nutstore account to download a backup. Automatic and manual uploads stay disabled until the vault has been created.</string>
    <string name="nutstore_restore_from_cloud">Restore from Nutstore</string>
    <string name="nutstore_bar_error_message">Nutstore backup failed: %s</string>
    <string name="pref_backups_title">Automatically back up the vault</string>
    <string name="pref_backups_summary">Automatically create backups of the vault on external storage when changes are made. This is only supported for encrypted vaults.</string>
    <string name="pref_backups_reminder_title">Backup reminder</string>
    <string name="pref_backups_reminder_summary">Show a reminder to backup your vault in case you haven\'t backed up your latest changes.</string>
    <string name="pref_backups_reminder_dialog_title">Disable backup reminder</string>
    <string name="pref_backups_reminder_dialog_summary">Disabling this reminder means Aegis won\'t tell you whether or not you have changes that are not backed up yet. This puts you at risk of losing access to your tokens. Are you sure you want to disable the reminder?</string>
    <string name="pref_backups_versioning_strategy_title">Backup strategy</string>
    <string name="pref_backups_versioning_strategy_keep_x_versions">Keep a number of versions</string>
</resources>